@@ -1,4 +1,4 @@
-$Id: README,v 1.3 1997/10/16 22:18:54 lf Exp $
+$Id: README,v 1.4 1997/10/23 20:52:01 lf Exp $
 
 Installation:
 =============
@@ -11,7 +11,8 @@ CPPFLAGS="-I/usr/inet6/include" LDFLAGS="-s -L/usr/inet6/lib"  ./configure \
 The configure script will now try to guess where your IPv6 libraries and
 include files are if you don't specify them explicitly via LDFLAGS or
 CPPFLAGS respectively. Currently it will search in /usr/inet6/(include|lib)
-and /usr/ipv6/(include|lib).
+and /usr/ipv6/(include|lib). You still have to use the --prefix option
+to specify the install tree though.
 
 Be aware that --enable-eui-64 is the default, use --disable-eui-64 to
 disable EUI-64 support.
@@ -32,6 +33,12 @@ uint*_t. The new code will not compile on older Linux systems. If you're
 desperate try defining translations for the new types in includes.h
 (e.g. #define uint8_t u_int8_t).
 
+Philip Blundell emailed me that there is a problem with struct cmsghdr with
+some combinations of glibc and the kernel. So if you experience problems
+with radvd it might be due to this problem. It's not fully known which
+versions of glibc and the kernel are affected and there's no fix
+available (10/23/97).
+
 For bug reports, fixes and suggestions contact me at lf@elemental.net.
 
-Lars Fenneberg, 10/16/97
+Lars Fenneberg, 10/23/97
