@@ -1,6 +1,6 @@
 #
-# $Id: VERSION,v 1.4 1997/10/19 18:39:13 lf Exp $
+# $Id: VERSION,v 1.5 1997/10/23 20:52:02 lf Exp $
 #
 # this file is automatically processed by configure
 #
-pre0.4.1-3
+0.4.1
