@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.3 1997/10/19 18:39:13 lf Exp $
+$Id: CHANGES,v 1.4 1997/10/23 20:52:01 lf Exp $
+
+10/23/97	radvd will now accept any prefix length in its config
+		file but will warn about unusual ones
 
 10/19/97	Removed backwards compatibility code in recv.c.
 		IPV6_HOPLIMIT support is now assumed to exist.
